# cmc

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  collector.py  config.py  default.nix  discovery.py  flake.nix  metrics.yaml  models.py  package.nix  pyproject.toml  requirements.txt
aggregation/: __init__.py  module_aggregator.py  project_aggregator.py  stats.py
graphs/: __init__.py  dsm.py  import_graph.py  models.py  pubspec_graph.py
metrics/: class_metrics.py  code_smells.py  distributions.py  duplication.py  file_metrics.py  fpy.py  function_metrics.py  history.py  rating.py  risk_hotspots.py  technical_debt.py  wmfp.py
output/: __init__.py  csv_writer.py  dot_writer.py  html_writer.py  json_writer.py  markdown_writer.py
package_analysis/: __init__.py  git_analysis.py  import_analysis.py  models.py  package_collector.py
parsers/: __init__.py  dart_parser.py  dcm_adapter.py
server/: index.html  styles.css
server/js/: charts.js  compare.js  helpers.js  metrics_ref.js  module.js  project.js  state.js  ui.js
